--- a/notebooks/price.ipynb
+++ b/notebooks/price.ipynb
@@ -2094,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2139,15 +2139,22 @@
     "            'best_score': gs.best_score_,\n",
     "            'best_params': gs.best_params_\n",
     "        })\n",
-    "\n",
+    "    print(scores)\n",
     "    return pd.DataFrame(scores,columns=['model','best_score','best_params'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'model': 'linear_regression', 'best_score': 0.8422031970744885, 'best_params': {'copy_X': True, 'fit_intercept': False, 'n_jobs': 1, 'positive': False}}, {'model': 'lasso', 'best_score': 0.705158641351597, 'best_params': {'alpha': 1, 'selection': 'random'}}, {'model': 'decision_tree', 'best_score': 0.7224105462925066, 'best_params': {'criterion': 'friedman_mse', 'splitter': 'best'}}]\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -2172,78 +2179,34 @@
       "sklearn.utils._param_validation.InvalidParameterError: The 'criterion' parameter of DecisionTreeRegressor must be a str among {'poisson', 'friedman_mse', 'squared_error', 'absolute_error'}. Got 'mse' instead.\n",
       "\n",
       "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "/home/codespace/.local/lib/python3.10/site-packages/sklearn/model_selection/_search.py:979: UserWarning: One or more of the test scores are non-finite: [       nan        nan 0.71777122 0.62214388]\n",
+      "/home/codespace/.local/lib/python3.10/site-packages/sklearn/model_selection/_search.py:979: UserWarning: One or more of the test scores are non-finite: [       nan        nan 0.72241055 0.63493186]\n",
       "  warnings.warn(\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "df10 = bestmodel(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model</th>\n",
-       "      <th>best_score</th>\n",
-       "      <th>best_params</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>linear_regression</td>\n",
-       "      <td>0.842203</td>\n",
-       "      <td>{'copy_X': True, 'fit_intercept': False, 'n_jo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>lasso</td>\n",
-       "      <td>0.705150</td>\n",
-       "      <td>{'alpha': 1, 'selection': 'cyclic'}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>decision_tree</td>\n",
-       "      <td>0.717771</td>\n",
-       "      <td>{'criterion': 'friedman_mse', 'splitter': 'best'}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "               model  best_score  \\\n",
-       "0  linear_regression    0.842203   \n",
-       "1              lasso    0.705150   \n",
-       "2      decision_tree    0.717771   \n",
-       "\n",
-       "                                         best_params  \n",
-       "0  {'copy_X': True, 'fit_intercept': False, 'n_jo...  \n",
-       "1                {'alpha': 1, 'selection': 'cyclic'}  \n",
-       "2  {'criterion': 'friedman_mse', 'splitter': 'best'}  "
+       "{'copy_X': True, 'fit_intercept': False, 'n_jobs': 1, 'positive': False}"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bestmodel(x,y)"
+    "df10.iloc[0][2]\n",
+    "## Best Paremeter to predict better Outpyt"
    ]
   },
   {
@@ -2281,25 +2244,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def price_pred(location,sqft,bath,bhk):\n",
-    "   l_ind = np.where(x.columns == location)[0][0]\n",
-    "\n",
-    "   a = np.zeros(len(x.columns))\n",
-    "   a[0] = sqft\n",
-    "   a[1] = bath\n",
-    "   a[2] = bhk\n",
-    "   if l_ind >= 0:\n",
-    "     a[l_ind] = 1\n",
-    "\n",
-    "   return z.predict([a])[0]    "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2328,7 +2272,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = LinearRegression(copy_X=True, fit_intercept=False,n_jobs=1, positive=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression(fit_intercept=False, n_jobs=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression(fit_intercept=False, n_jobs=1)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LinearRegression(fit_intercept=False, n_jobs=1)"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2-Score :  0.8822994401667984\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"R2-Score : \",m.r2_score(y_test, temp.predict(x_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def price_pred(location,sqft,bath,bhk):\n",
+    "   l_ind = np.where(x.columns == location)[0][0]\n",
+    "\n",
+    "   a = np.zeros(len(x.columns))\n",
+    "   a[0] = sqft\n",
+    "   a[1] = bath\n",
+    "   a[2] = bhk\n",
+    "   if l_ind >= 0:\n",
+    "     a[l_ind] = 1\n",
+    "\n",
+    "   return temp.predict([a])[0]    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -2342,10 +2354,10 @@
     {
      "data": {
       "text/plain": [
-       "83.12600437791582"
+       "83.09307436096769"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2355,11 +2367,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pickling the File"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "pickle.dumo()"
+   ]
   },
   {
    "cell_type": "code",
