--- a/notebooks/price.ipynb
+++ b/notebooks/price.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "4      NaN       1200   2.0      1.0   51.00  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "(13320, 9)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "Name: location, Length: 1305, dtype: int64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
        "Name: size, dtype: int64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "Name: bath, dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
        "4                  Kothanur      2 BHK      1200.0   2.0   51.00    2"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
        "Name: location, Length: 1306, dtype: int64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
        "Name: location, Length: 1054, dtype: int64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
        "Name: location, Length: 242, dtype: int64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
        "[744 rows x 7 columns]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
        "(12576, 7)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1199,7 @@
        "Name: price_per_sqft, dtype: float64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1244,7 @@
        "(10301, 7)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1265,7 @@
        "(7361, 7)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1301,7 @@
        "(7282, 7)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1488,7 @@
        "16   1st Phase JP Nagar       840.0   2.0   50.0    1"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,7 @@
        "[5 rows x 246 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1734,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1946,7 +1946,7 @@
        "[5 rows x 245 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1972,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2007,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +2019,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2042,7 +2042,7 @@
        "0.8821962827133929"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2053,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2071,7 +2071,7 @@
        "array([0.84383512, 0.82953609, 0.85680774, 0.83582098, 0.84083703])"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2094,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2145,14 +2145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'model': 'linear_regression', 'best_score': 0.8422031970744885, 'best_params': {'copy_X': True, 'fit_intercept': False, 'n_jobs': 1, 'positive': False}}, {'model': 'lasso', 'best_score': 0.705158641351597, 'best_params': {'alpha': 1, 'selection': 'random'}}, {'model': 'decision_tree', 'best_score': 0.7224105462925066, 'best_params': {'criterion': 'friedman_mse', 'splitter': 'best'}}]\n"
+      "[{'model': 'linear_regression', 'best_score': 0.8422031970744885, 'best_params': {'copy_X': True, 'fit_intercept': False, 'n_jobs': 1, 'positive': False}}, {'model': 'lasso', 'best_score': 0.7051592436108283, 'best_params': {'alpha': 1, 'selection': 'random'}}, {'model': 'decision_tree', 'best_score': 0.718466814007144, 'best_params': {'criterion': 'friedman_mse', 'splitter': 'best'}}]\n"
      ]
     },
     {
@@ -2176,10 +2176,10 @@
       "    validate_parameter_constraints(\n",
       "  File \"/home/codespace/.local/lib/python3.10/site-packages/sklearn/utils/_param_validation.py\", line 96, in validate_parameter_constraints\n",
       "    raise InvalidParameterError(\n",
-      "sklearn.utils._param_validation.InvalidParameterError: The 'criterion' parameter of DecisionTreeRegressor must be a str among {'poisson', 'friedman_mse', 'squared_error', 'absolute_error'}. Got 'mse' instead.\n",
+      "sklearn.utils._param_validation.InvalidParameterError: The 'criterion' parameter of DecisionTreeRegressor must be a str among {'friedman_mse', 'absolute_error', 'squared_error', 'poisson'}. Got 'mse' instead.\n",
       "\n",
       "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "/home/codespace/.local/lib/python3.10/site-packages/sklearn/model_selection/_search.py:979: UserWarning: One or more of the test scores are non-finite: [       nan        nan 0.72241055 0.63493186]\n",
+      "/home/codespace/.local/lib/python3.10/site-packages/sklearn/model_selection/_search.py:979: UserWarning: One or more of the test scores are non-finite: [       nan        nan 0.71846681 0.68367324]\n",
       "  warnings.warn(\n"
      ]
     }
@@ -2190,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2199,7 @@
        "{'copy_X': True, 'fit_intercept': False, 'n_jobs': 1, 'positive': False}"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2218,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2234,7 +2234,7 @@
        "      dtype='object', length=245)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2252,7 +2252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2272,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2281,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2293,7 +2293,7 @@
        "LinearRegression(fit_intercept=False, n_jobs=1)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2304,7 +2304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2321,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2340,7 +2340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2357,7 +2357,7 @@
        "83.09307436096769"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2375,13 +2375,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "pickle.dumo()"
+    "pickle.dump(temp, open('LinearModel.pkl', 'wb'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
